# ADMEPredictor

./: .gitignore  README.md  architecture.md  biology-concepts.md  claude.md  walkthrough.md
backend/: .dockerignore  Dockerfile  evaluate.py  featurization.py  main.py  model_registry.py  requirements.txt  train.py
backend/api/: routes.py  schemas.py
backend/models/: gnn_model.py  rf_model.py
backend/tests/: test_api.py  test_featurization.py
checkpoints/: gnn_best.pt
docs/: deployment.md
docs/superpowers/plans/: 2026-03-15-rdkitjs-molecule-viewer.md
docs/superpowers/specs/: 2026-03-15-rdkitjs-molecule-viewer-design.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: BatchUpload.tsx  ExampleMolecules.tsx  MoleculeInput.tsx  MoleculeViewer.tsx  PredictionResults.tsx  PropertyCard.tsx
frontend/src/hooks/: useMolecule.ts  usePrediction.ts
frontend/src/services/: api.ts  rdkit.ts  validation.ts
frontend/src/utils/: chemistry.ts  formatting.ts
mcp_server/: client.py  pyproject.toml  server.py  tools.py
notebooks/: 01_data_exploration.ipynb  02_featurization.ipynb  03_training.ipynb
