[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adme-predictor-mcp"
version = "0.1.0"
description = "MCP server exposing ADME property predictions to LLM clients"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
adme-predictor-mcp = "mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]
